# fraglets

cca/: .classpath  .cvsignore  .project  CHANGES  LICENSE  README  build.xml  cca.html
cish/dgrep/: README  delta.c  read.c
cish/relay/: config.h  configure  configure.in  ftprelay.c  inetd.c  relay.cnf
cish/tryst/: .cvsignore  Makefile  accept.c  alloc.c  data.c  free.c  internal.h  offer.c  receive.c  size.c  tryst.h
crm114j/: .classpath  .cvsignore  .project
eclipse-zeig/: .options  .project  build.properties  plugin.xml
eclipse-zeig/icons/: browser.xcf
fraglets/bash/: javadepend
fraglets/cish/dgrep/: Makefile  dgrep.c  dgrep.h  search.c
fraglets/cish/relay/: .cvsignore  Makefile.in  README  config.h  ftprelay.c  ftprelay.cnf  inetd.c  inetd.cnf  relay.c
fraglets/cish/tryst/: Makefile  accept.c  alloc.c  data.c  fileno.c  free.c  receive.c  send.c  size.c  test-tryst.c  tryst.h
fraglets/html/: beans.php  index.php  makefile.jmk
fraglets/html/yaelp/: UpdateApplet.html
fraglets/jars/: jmk.reg
html/: .cvsignore  index.php  makefile.jmk
html/yaelp/: UpdateApplet.html  userman.html
jars/: README.txt
net.sourceforge.fraglets.3rd/: .classpath  .cvsignore  .project  about.html  build.properties  fragment.xml
zeig/: .classpath  .cvsignore  .options  .project  about.html  build.properties  build.xml  javadoc.xml  otphash.jardesc  plugin.xml
zeig/src/: clean.sql  connection.properties  fsck.sql  jndi.properties  log4j.properties  zeig.mysql  zeig.sql
zieh/: .classpath  .project  zieh.jardesc
zieh/src/: dialog.dtd  panel.dtd
(+345 files in other folders)
