dnl Process this file with autoconf to produce a configure script.
AC_REVISION($Revision: 1.1 $)
AC_INIT(inetd.c)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/filio.h)
AC_TYPE_SIGNAL
AC_CHECK_LIB(44bsd, inet_aton)
AC_CHECK_LIB(bsd, inet_aton)
AC_CHECK_LIB(resolv, res_init)
AC_CHECK_LIB(socket, setsockopt)
AC_CHECK_FUNCS(getdtablesize memcpy setsid socket strdup)

AC_OUTPUT(Makefile)
